<resources>
    <string name="app_name">Superandome - AppFinal</string>
    <string name="tituloCargarEmocion">Cargar emoción diaria:</string>
    <string name="alegria">Alegría</string>
    <string name="tristeza">Tristeza</string>
    <string name="ira">Ira</string>
    <string name="miedo">Miedo</string>
    <string name="asco">Asco</string>
    <string name="registrar">Registrar</string>
    <string name="cancelarConfigHora">Cancelar</string>
    <string name="aceptarConfigHora">Aceptar</string>
    <string name="tituloConfHora">Configurar Horario:</string>
    <string name="configActual">Configuración actual:</string>
    <string name="tituloSugContenido">Sugerir contenido:</string>
    <string name="tituloAutor">Autor:</string>
    <string name="nombreAutor">Inés</string>
    <string name="tituloArchivo">Cargar archivo:</string>
    <string name="buscarArchivo">Buscar</string>
    <string name="tituloTipoCont">Tipo contenido:</string>
    <string name="tipoContenido">Video</string>
    <string name="enviar">Enviar</string>

    <string name="tituloInformeEmocion">Informe Mensual</string>
    <string name="subtituloInformeEmocion">Estados de ánimo</string>

    <string name="tituloInformeRutina">Informe Mensual</string>

    <string name="tituloSugConsejo">Sugerir consejo:</string>
    <string name="sugConsejo">Escriba aquí...</string>
    <string name="enviarSugerencia">Enviar sugerencia</string>

    <string name="tituloPregunta">Pregunta seguridad</string>
    <string name="respuestaPregunta">Ingrese respuesta</string>
    <string name="usuarioPregunta">Ingrese usuario</string>


    <string name="tituloEncuesta"> Encuesta diaria </string>
    <string name="subEncuesta"> Responda esta encuesta para analizar tu estado emocional diario. </string>
    <string name="fechaEncuesta"> Fecha:  </string>
    <string name="btnEncuesta"> Enviar  </string>

    <string name="tituloRutina"> Rutina diaria  </string>
    <string name="btnRutina"> Guardar  </string>
    <string name="tituloMultimedia"> Multimedia  </string>
    <string name="btnAbrirMultimedia"> Abrir  </string>
    <string name="txtDescripcionMultimedia"> <u>Descripcion</u>  </string>
    <string name="btnConfirmar">Confirmar</string>

    <string name="tituloRutinaSeguimiento"> Seguimiento rutina  </string>


    <string name="title_activity_navigation_drawer_consultante">navigationDrawer_consultante
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="nickname">nickname</string>
    <string name="password">password</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="o">ó</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="psicologa">PSIC. JULIET VÉLEZ</string>
    <string name="redessociales">/soyuzsaludmental</string>

    <string name="formulario_de">Formulario de</string>
    <string name="registro">Registro</string>
    <string name="ingresenombre">Ingrese Nickname</string>
    <string name="ingresenacimiento">Ingrese Fecha de Nacimiento</string>
    <string name="fechanac">fecha nacimiento</string>
    <string name="seleccionegenero">Seleccione su Género</string>
    <string name="genero">género</string>
    <string name="ingresepass">Ingrese Password</string>
    <string name="confipass">Confirme Password</string>
    <string name="confipass2">confirme password</string>
    <string name="registrarse">Registrarse</string>

    <string name="altaProfesional">Alta Profesional</string>
    <string name="fechahoy">Fecha: </string>
    <string name="FECHA_DE_EJEMPLO">01/10/2021</string>
    <string name="id">ID:</string>
    <string name="ingresenombre2">Nickname</string>
    <string name="ingresenacimiento2">Fecha de Nacimiento</string>
    <string name="seleccionegenero2">Género</string>
    <string name="ingresepass2">Password</string>
    <string name="btnAceptar">Aceptar</string>



    <string name="aprobar_rechazar">Aprobar/Rechazar Contenido</string>
    <string name="tvContenido">Contenido: </string>
    <string name="tvSugeridoPor">Sugerido por:</string>
    <string name="tvTipoContenido">Tipo Contenido: </string>
    <string name="btnAprobar">Aprobar</string>
    <string name="btnRechazar">Rechazar</string>

    <string name="preguntaSeguridad">Pregunta de Seguridad</string>
    <string name="respuestaSeguridad">Respuesta</string>
    <string name="respuestaSeguridad2">respuesta</string>

    <string name="olvidoContrasenia">Olvidé mi Contraseña</string>

    <string name="ver_resultados_anteriores">Ver resultados anteriores</string>
    <string name="resultados_anteriores">Resultados anteriores</string>

    <!-- Rutinas -->
    <string name="rutinaDieta">Dieta equilibrada</string>
    <string name="rutinaConsumo">Consumo de tóxicos moderado</string>
    <string name="rutinaEjercicio">Ejercicio físico moderado</string>
    <string name="rutinaDescanso">Descanso reparador</string>
    <string name="rutinaAmbiente">Cuidado del medio ambiente</string>
    <string name="rutinaHigiene">Higiene personal adecuada</string>
    <string name="rutinaEquilibrio">Equilibrio mental y emocional</string>
    <string name="rutinaSocial">Relaciones sociales positivas</string>
    <string name="rutinaOcio">Practicar actividades de ocio</string>
    <string name="rutinaNaturaleza">Contacto con la naturaleza</string>

    <!--ENCUESTA-->
    <string name="torpeEntumecido">Torpe o entumecido.</string>
    <string name="acalorado">Acalorado.</string>
    <string name="temblor">Con temblor en las piernas</string>
    <string name="incapaz">Incapaz de relajarse</string>
    <string name="temor">Con temor a que ocurra lo peor.</string>
    <string name="mareado">Mareado, o que se le va la cabeza.</string>
    <string name="latidosCora">Con latidos del corazón fuertes y acelerados.</string>
    <string name="inestable">Inestable.</string>
    <string name="atemorizado">Atemorizado o asustado.</string>
    <string name="nervioso">Nervioso.</string>

    <string name="bloqueo">Con sensación de bloqueo.</string>
    <string name="temblores">Con temblores en las manos</string>
    <string name="inquieroInseguro">Inquieto, inseguro.</string>
    <string name="miedoPerder.">Con miedo a perder el control.</string>
    <string name="sensacion">Con sensación de ahogo.</string>
    <string name="temorMorir">Con temor a morir.</string>
    <string name="conMiedo">Con miedo.</string>
    <string name="digestivos">Con problemas digestivos.</string>
    <string name="desvanecimiento">Con desvanecimientos</string>
    <string name="ruborFacial">Con rubor facial</string>
    <string name="sudoresFriosCal">Con sudores, frios o calientes.</string>
    <string name="encuestaBeck">En el cuestionario hay una lista de síntomas comunes de la ansiedad. Lea cada uno de los ítems atentamente, e indique cuanto le ha afectado en la última semana incluyendo hoy:</string>

</resources>