<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_altaConsultante"
    android:orientation="vertical"
    android:background="@drawable/consultante">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="127dp"
                android:layout_height="107dp"
                android:layout_gravity="right"
                app:srcCompat="@drawable/logo_soyuz" />

            <TextView
                android:id="@+id/tvFormulariode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/redhat_medium"
                android:text="@string/formulario_de"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/redhat_medium"
                android:text="@string/registro"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/ingresenombre"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editTextNameConsultante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/questrial_regular"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tvFechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/ingresenacimiento"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editTextNacConsultante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/questrial_regular"
                android:hint="@string/fechanac"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/seleccionegenero"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/spinnerGeneroConsultante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="48dp"
                android:background="@drawable/border"/>

            <TextView
                android:id="@+id/tvPreguntaSeguridad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/preguntaSeguridad"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/spinnerPreguntas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="48dp"
                android:background="@drawable/border"/>

            <TextView
                android:id="@+id/tvRespuestaSeguridad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/respuestaSeguridad"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editTextRespuestaSeguridad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/questrial_regular"
                android:hint="@string/respuestaSeguridad2"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/ingresepass"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                />

            <EditText
                android:id="@+id/editTextPassConsultante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/questrial_regular"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/confipass"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                />

            <EditText
                android:id="@+id/editTextConfPassConsultante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/questrial_regular"
                android:hint="@string/confipass2"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="#4167B2"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/registrarse"
                android:textAllCaps="false"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>