<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/consultante"
    tools:context=".sugerirContenido">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloSugContenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/redhat_medium"
                android:text="@string/tituloSugContenido"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tvTituloAutor"
                        android:layout_width="223dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/redhat_regular"
                        android:text="@string/tituloAutor"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvAutor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombreAutor"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tvTituloArchivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/redhat_regular"
                        android:text="@string/tituloArchivo"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btnElegirArchivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#7F7F7F"
                        android:text="@string/buscarArchivo" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tvTituloTipoArc"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/redhat_regular"
                        android:text="@string/tituloTipoCont"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvTipoContenido"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipoContenido"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <Button
                    android:id="@+id/btnEnviarSugerencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enviar"
                    android:backgroundTint="#496BB2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </ScrollView>
</FrameLayout>