<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/director"
    tools:context=".altaProfesional">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="114dp"
                        android:layout_height="107dp"
                        android:src="@drawable/logo_soyuz" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:id="@+id/textView26"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/tvAltaProfesional"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/redhat_medium"
                                android:text="@string/altaProfesional"
                                android:textColor="#FFFFFF"
                                android:textSize="30sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:id="@+id/tvFecha"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/redhat_medium"
                                android:text="@string/fechahoy"
                                android:textAlignment="textEnd"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tvFechaHOY"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/redhat_medium"
                                android:text="@string/FECHA_DE_EJEMPLO"
                                android:textAlignment="textEnd"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp" />
                        </TableRow>

                    </TableLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:id="@+id/tvID"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/questrial_regular"
                        android:text="@string/id"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tvIdUsuario"
                        android:layout_width="238dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="50dp"
                        android:background="@drawable/borderspinner"
                        android:text="120"
                        android:textAlignment="textEnd"
                        android:textSize="24sp" />
                </TableRow>

                <TextView
                    android:id="@+id/tvNickProfesional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/questrial_regular"
                    android:text="@string/ingresenombre2"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextNicknameProf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/nickname"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/tvFechaNac3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/questrial_regular"
                    android:text="@string/ingresenacimiento2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextNaciProf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/fechanac"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/tvGenero3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/questrial_regular"
                    android:text="@string/seleccionegenero2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <Spinner
                    android:id="@+id/spinnerGeneroProfe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/tvPass3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/questrial_regular"
                    android:text="@string/ingresepass2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextPassProf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/password"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/tvConfirmPass3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/questrial_regular"
                    android:text="@string/confipass"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextConfPassProf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/confipass2"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/btnAceptarAlta"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="#4167B2"
                    android:fontFamily="@font/questrial_regular"
                    android:text="@string/btnAceptar"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>